<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicina"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/rosa_pastel"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saludlife"
            android:textColor="@color/negro"
            android:textSize="24sp"
            android:textStyle="bold" />

            <ImageView
                android:id="@+id/tvLogo"
                android:layout_width="49dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parametro de monitoreo"
        android:textSize="18sp"
        android:textColor="@color/coral_claro"
        android:layout_marginTop="16dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Límite Inferior (Ingrese BPM)"
        android:layout_marginTop="8dp"
        android:textColor="@color/negro"
        android:minHeight="48dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_bpm"
        android:inputType="number"
        android:background="@color/lavanda"
        android:textColor="@color/gris_claro"
        android:minHeight="48dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_mite_superior_ingrese_bpm"
        android:layout_marginTop="15dp"
        android:textColor="@color/negro"
        android:minHeight="48dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_bpm1"
        android:inputType="number"
        android:background="@color/lavanda"
        android:textColor="@color/gris_claro"
        android:minHeight="48dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_mite_inferior_ingrese"
        android:layout_marginTop="8dp"
        android:textColor="@color/negro"
        android:minHeight="48dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese"
        android:inputType="number"
        android:background="@color/lavanda"
        android:textColor="@color/gris_claro"
        android:minHeight="48dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_mite_superior_ingrese"
        android:layout_marginTop="8dp"
        android:textColor="@color/negro"
        android:minHeight="48dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese %"
        android:inputType="number"
        android:background="@color/lavanda"
        android:textColor="@color/gris_claro"
        android:minHeight="48dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:background="@color/amarillo_suave"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="Guide Icon"
                android:src="@drawable/guide" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="Home Icon"
                android:src="@drawable/home" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="Stats Icon"
                android:src="@drawable/stats" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>